--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ bin
 obj
 node_modules
 *.pubxml.user
+src/WebApp/wwwroot/main.js
+src/WebApp/wwwroot/main.js.map
+src/WebApp/wwwroot/styles.css
+src/WebApp/wwwroot/styles.css.map
