--- a/package.json
+++ b/package.json
@@ -1,38 +1,31 @@
 {
 	"private": true,
 	"scripts": {
-		"dev": "cross-env NODE_ENV=development webpack --watch",
-		"devbuild": "cross-env NODE_ENV=development webpack",
-		"prodbuild": "cross-env NODE_ENV=production webpack"
+		"dev": "npm-run-all --parallel dev:*",
+		"dev:js": "cross-env NODE_ENV=development webpack --watch",
+		"dev:css": "tailwindcss -i ./src/styles.css -o ./src/WebApp/wwwroot/styles.css --postcss --watch",
+		"prodbuild": "npm-run-all --parallel prodbuild:*",
+		"prodbuild:js": "cross-env NODE_ENV=production webpack",
+		"prodbuild:css": "tailwindcss -i ./src/styles.css -o ./src/WebApp/wwwroot/styles.css --postcss --minify"
 	},
 	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/typography": "^0.5.7",
+		"autoprefixer": "^10.4.12",
 		"cross-env": "^7.0",
-		"css-loader": "^3.5.3",
-		"cssnano": "^4.1.10",
-		"extract-text-webpack-plugin": "^4.0.0-beta.0",
-		"html-webpack-plugin": "^4.3.0",
-		"postcss-loader": "^3.0.0",
-		"purgecss-webpack-plugin": "^2.2.0",
-		"style-loader": "^1.2.1",
-		"webpack": "^4.43.0",
-		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.11.0",
-		"write-file-webpack-plugin": "^4.5.1",
-		"yargs-parser": "^18.1.3",
-		"@tailwindcss/postcss7-compat": "^2.0.2",
-		"@tailwindcss/typography": "^0.3.1",
-		"autoprefixer": "^9.8.6",
-		"file-loader": "^6.0.0",
-		"postcss": "^7.0.35",
-		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
-		"url-loader": "^4.1.0"
+		"npm-run-all": "^4.1.5",
+		"tailwindcss": "^3.1.8",
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.10.0"
 	},
 	"dependencies": {
-		"@babel/core": "^7.14.0",
-		"@babel/plugin-proposal-class-properties": "^7.13.0",
-		"@babel/preset-env": "^7.14.0",
-		"@hotwired/turbo": "^7.0.0-beta.5",
-		"babel-loader": "^8.2.2",
-		"stimulus": "^2.0.0"
+		"@babel/core": "^7.19.3",
+		"@babel/plugin-proposal-class-properties": "^7.18.6",
+		"@babel/plugin-transform-runtime": "^7.19.1",
+		"@babel/preset-env": "^7.19.4",
+		"@hotwired/stimulus": "^3.1.0",
+		"@hotwired/stimulus-webpack-helpers": "^1.0.1",
+		"@hotwired/turbo": "^7.2.0",
+		"babel-loader": "^8.2.5"
 	}
 }
