--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"scripts": {
 		"dev": "npm-run-all --parallel dev:*",
 		"dev:js": "cross-env NODE_ENV=development webpack --watch",
-		"dev:css": "tailwindcss -i ./src/styles.css -o ./src/WebApp/wwwroot/styles.css --postcss --watch",
+		"dev:css": "tailwindcss -i ./src/styles.css -o ./src/WebApp/wwwroot/dist/styles.css --postcss --watch --verbose",
 		"prodbuild": "npm-run-all --parallel prodbuild:*",
 		"prodbuild:js": "cross-env NODE_ENV=production webpack",
-		"prodbuild:css": "tailwindcss -i ./src/styles.css -o ./src/WebApp/wwwroot/styles.css --postcss --minify"
+		"prodbuild:css": "tailwindcss -i ./src/styles.css -o ./src/WebApp/wwwroot/dist/styles.css --postcss --minify"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.3",
@@ -14,7 +14,7 @@
 		"autoprefixer": "^10.4.12",
 		"cross-env": "^7.0",
 		"npm-run-all": "^4.1.5",
-		"tailwindcss": "^3.1.8",
+		"tailwindcss": "^3.1.7",
 		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0"
 	},
