--- a/src/Krompaco.HotwiredAspNet/Krompaco.HotwiredAspNet.csproj
+++ b/src/Krompaco.HotwiredAspNet/Krompaco.HotwiredAspNet.csproj
@@ -15,6 +15,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
