--- a/.github/workflows/main_hotwired.yml
+++ b/.github/workflows/main_hotwired.yml
@@ -16,6 +16,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Setup npm
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18.12.0
+      - run: npm ci
+      - run: npm run prodbuild
+
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
