--- a/.github/workflows/main_hotwired.yml
+++ b/.github/workflows/main_hotwired.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '7.0.x'
-          include-prerelease: true
+          include-prerelease: false
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
