Rename class library and remove barebone Web Socket and use the SignalR example from https://medium.com/@kpax/hotwired-asp-net-core-web-application-part-4-5ff84da54452

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "cSpell.words": [
-        "Krompaco",
         "Hotwired",
+        "Krompaco",
         "prodbuild",
+        "signalr",
         "streamtesthandler"
     ]
 }
