--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@hotwired/stimulus": "^3.1.1",
 		"@hotwired/stimulus-webpack-helpers": "^1.0.1",
 		"@hotwired/turbo": "^7.2.4",
+		"@microsoft/signalr": "^7.0.3",
 		"babel-loader": "^9.1.0"
 	}
 }
