--- a/.github/workflows/main_hotwired.yml
+++ b/.github/workflows/main_hotwired.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: '7.0.x'
           include-prerelease: false
 
       - name: Build with dotnet
@@ -35,30 +35,30 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-      #- name: Upload artifact for deployment job
-      #  uses: actions/upload-artifact@v2
-      #  with:
-      #    name: .net-app
-      #    path: ${{env.DOTNET_ROOT}}/myapp
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v2
+        with:
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/myapp
 
-  #deploy:
-  #  runs-on: ubuntu-latest
-  #  needs: build
-  #  environment:
-  #    name: 'Production'
-  #    url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-  #  steps:
-  #    - name: Download artifact from build job
-  #      uses: actions/download-artifact@v2
-  #      with:
-  #        name: .net-app
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: .net-app
 
-  #    - name: Deploy to Azure Web App
-  #      id: deploy-to-webapp
-  #      uses: azure/webapps-deploy@v2
-  #      with:
-  #        app-name: 'hotwired'
-  #        slot-name: 'Production'
-  #        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_74FB1490A429411DA1C4F0565E94B825 }}
-  #        package: .
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'hotwired'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_74FB1490A429411DA1C4F0565E94B825 }}
+          package: .
